<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage"
    tools:context=".View.Activities.LoginActivities.LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_walkwithme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/mEmployeeid"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="32dp"
        android:gravity="center_horizontal"
        android:text="Walk with me"
        android:textColor="#fff"
        android:fontFamily="@font/unicorn"
        android:textSize="30dp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/img_mainlogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:backgroundTint="#007cba"
        android:foregroundTint="#007cba"
        android:foregroundTintMode="multiply"
        android:src="@drawable/mainlogo"
        android:tintMode="multiply" />


    <EditText
        android:id="@+id/mEmployeeid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="20dp"
        android:backgroundTint="#fff"
        android:focusable="true"
        android:hint="Employee ID"
        android:textColor="#fff"
        android:textSize="15dp"
        android:textColorHighlight="#fff"
        android:textColorHint="#fff"
        android:textStyle="italic" />


    <EditText
        android:id="@+id/mEmployeepassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/mEmployeeid"
        android:layout_margin="20dp"
        android:layout_marginTop="18dp"
        android:backgroundTint="#fff"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="#fff"
        android:textSize="15dp"
        android:textColorHint="#fff"
        android:textStyle="italic" />


    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/mEmployeepassword"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp"
        android:alpha="0.5"
        android:background="@drawable/btn_bg_login"
        android:padding="5dp"
        android:text="Login"
        android:backgroundTint="#F18A00"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20dp" />
    <Button
        android:id="@+id/btnCamera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/btnLogin"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:alpha="0.5"
        android:background="@drawable/btn_bg_login"
        android:padding="5dp"
        android:text="Camera Login"
        android:backgroundTint="#F18A00"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:textSize="20dp" />


    <ImageView
        android:id="@+id/teksystems_logo"
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:padding="0dp"
        android:src="@drawable/teksystemslogo" />


</RelativeLayout>

