<resources>
    <string name="app_name">Walk with me</string>
    <string name="indooratlas_floor_plan_id">c0264dc8-ed4f-42f4-93c6-4a58e2dbffca</string>
    <string name="button_close">Close</string>
    <string name="example_wayfinding_description">Demonstrates usage of IndoorAtlas Wayfinding</string>
    <string name="storage_permission_denied_message">No access to external storage. Permission needed for displaying floor plans</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="error_message">"Please enter location name"</string>
    <string name="Say_something">Say Something.. </string>
    <string name="invalid_credentials">Alert Invalid Credentials</string>
    <string name="OK">OK</string>
    <string name="action_settings">Settings</string>
    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="picture_taken">Picture taken</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="switch_flash">Switch flash</string>
    <string name="switch_camera">Switch camera</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>
    <string name="take_picture">Recognize</string>
    <string name="add_person">Add</string>
    <string name="title_activity_add_person">AddPerson</string>

</resources>
