...
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="2"
        tools:context="com.gradledevextreme.light.indooratlaspro.View.Activities.Main.MainActivity">

        <LinearLayout
            android:id="@+id/usingCurrentLocation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="7dp"
            android:layout_weight="1"
            android:background="#fff"
            android:orientation="vertical">
...
                android:textColor="#000000"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/usingMapLocation"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="7dp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_weight="1"
...
