<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewPager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage">

    <FrameLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroundimage"
        android:clickable="true">

        <Button
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/backgroundimage"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="30dp"
            android:textStyle="italic"

            />
    </FrameLayout>

</LinearLayout>